@@ -1,3 +1,10 @@
+2008-07-22  Michael Hutchinson <mhutchinson@novell.com> 
+
+	* MonoDevelop.Core.Execution/ProcessWrapper.cs,
+	  MonoDevelop.Core.Execution/ProcessService.cs: Work around Mono bug
+	  410743 - "wapi leak in System.Diagnostic.Process". Fixes "Bug
+	  410740 - ProcessWrapper leaks wapi handles".
+
 2008-07-21  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.Core.Serialization/DataContext.cs,
